--- a/Run_on_Run.html
+++ b/Run_on_Run.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>glow</title>
+	<title>RunOnRun</title>
 	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
