--- a/Run_on_Run.html
+++ b/Run_on_Run.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>RunOnRun</title>
+	<title>FLEXIM</title>
 	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
 	<div class="loader">
-			
 	</div>
+	<h2><span>F</span>riday <span>F</span>lexit
+		
 </body>
 </html>
